# wmic-serialnumber

./: Cargo.toml  README.md
src/: main.rs  main.rs.old
