[package]
name = "asa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["fileapi", "winbase", "winioctl", "handleapi", "ioapiset", "minwindef", "winnt", "winerror", "ntddscsi"] }
widestring = "0.4"